<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24sp"
        android:paddingRight="24sp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:layout_marginBottom="24sp"
            android:layout_marginTop="50sp"
            android:text="@string/Register"
            android:fontFamily="cursive"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />


        <!--  Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="8sp"
            android:layout_marginBottom="8sp">
            <EditText android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:textColor="@color/colorPrimaryDark"
                android:hint="@string/name" />
        </android.support.design.widget.TextInputLayout>
        <!--  Name Label -->

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="8sp"
            android:layout_marginBottom="8sp">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="8sp"
            android:layout_marginBottom="8sp">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="8sp"
            android:layout_marginBottom="8sp">
            <EditText android:id="@+id/input_cpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                android:hint="@string/c_password"/>
        </android.support.design.widget.TextInputLayout>

        <!--<android.support.design.widget.TextInputLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textColor="@color/colorPrimaryDark"-->
        <!--android:layout_marginTop="8sp"-->
        <!--android:layout_marginBottom="8sp">-->
        <!--<EditText android:id="@+id/input_namecom"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:inputType="textCapWords"-->
        <!--android:hint="@string/mobile_num" />-->
        <!--</android.support.design.widget.TextInputLayout>-->



        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:layout_marginBottom="24sp"
            android:padding="12sp"
            android:background="@color/colorPrimaryDark"
            android:textColor="#fff"
            android:textSize="20sp"
            android:text="@string/register"/>


        <TextView android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24sp"
            android:text="@string/go_login"
            android:gravity="center"
            android:linksClickable="true"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"/>

    </LinearLayout>
</ScrollView>