<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFF"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24sp"
        android:paddingRight="24sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:layout_marginBottom="24sp"
            android:text="@string/Login"
            android:layout_marginTop="50sp"
            android:fontFamily="cursive"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />




        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginBottom="8sp">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryDark"
                android:hint="@string/email" />

        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="8sp"
            android:layout_marginBottom="8sp">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:layout_marginBottom="24sp"
            android:padding="12sp"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:textSize="15sp"
            android:text="@string/login"/>

        <!--<TextView android:id="@+id/forget_password"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="24sp"-->
            <!--android:text="@string/f_password"-->
            <!--android:clickable="true"-->
            <!--android:gravity="center"-->
            <!--android:textColor="@color/colorPrimaryDark"-->
            <!--android:textSize="15sp"/>-->

        <TextView android:id="@+id/link_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24sp"
            android:text="@string/go_register"
            android:clickable="true"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"/>



    </LinearLayout>
</ScrollView>
